data/derived/sp14/progs/unify/prog2057.ml.out
Characters 119-122:
  | Cosine e1 -> (cos*pi(eval (e1, x, y)))
                  ^^^
Error: This expression has type float -> float
       but an expression was expected of type int
